; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_nuvoton-cir.c_nvt_cir_regs_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/rc/extr_nuvoton-cir.c_nvt_cir_regs_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvt_dev = type { i32 }

@CIR_RX_LIMIT_COUNT = common dso_local global i32 0, align 4
@CIR_SLCH = common dso_local global i32 0, align 4
@CIR_SLCL = common dso_local global i32 0, align 4
@CIR_FIFOCON_TX_TRIGGER_LEV = common dso_local global i32 0, align 4
@CIR_FIFOCON_RX_TRIGGER_LEV = common dso_local global i32 0, align 4
@CIR_FIFOCON = common dso_local global i32 0, align 4
@CIR_IRCON_TXEN = common dso_local global i32 0, align 4
@CIR_IRCON_RXEN = common dso_local global i32 0, align 4
@CIR_IRCON_RXINV = common dso_local global i32 0, align 4
@CIR_IRCON_SAMPLE_PERIOD_SEL = common dso_local global i32 0, align 4
@CIR_IRCON = common dso_local global i32 0, align 4
@CIR_IRSTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvt_dev*)* @nvt_cir_regs_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvt_cir_regs_init(%struct.nvt_dev* %0) #0 {
  %2 = alloca %struct.nvt_dev*, align 8
  store %struct.nvt_dev* %0, %struct.nvt_dev** %2, align 8
  %3 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %4 = load i32, i32* @CIR_RX_LIMIT_COUNT, align 4
  %5 = ashr i32 %4, 8
  %6 = load i32, i32* @CIR_SLCH, align 4
  %7 = call i32 @nvt_cir_reg_write(%struct.nvt_dev* %3, i32 %5, i32 %6)
  %8 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %9 = load i32, i32* @CIR_RX_LIMIT_COUNT, align 4
  %10 = and i32 %9, 255
  %11 = load i32, i32* @CIR_SLCL, align 4
  %12 = call i32 @nvt_cir_reg_write(%struct.nvt_dev* %8, i32 %10, i32 %11)
  %13 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %14 = load i32, i32* @CIR_FIFOCON_TX_TRIGGER_LEV, align 4
  %15 = load i32, i32* @CIR_FIFOCON_RX_TRIGGER_LEV, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @CIR_FIFOCON, align 4
  %18 = call i32 @nvt_cir_reg_write(%struct.nvt_dev* %13, i32 %16, i32 %17)
  %19 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %20 = load i32, i32* @CIR_IRCON_TXEN, align 4
  %21 = load i32, i32* @CIR_IRCON_RXEN, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @CIR_IRCON_RXINV, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @CIR_IRCON_SAMPLE_PERIOD_SEL, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* @CIR_IRCON, align 4
  %28 = call i32 @nvt_cir_reg_write(%struct.nvt_dev* %19, i32 %26, i32 %27)
  %29 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %30 = call i32 @nvt_clear_cir_fifo(%struct.nvt_dev* %29)
  %31 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %32 = call i32 @nvt_clear_tx_fifo(%struct.nvt_dev* %31)
  %33 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %34 = load i32, i32* @CIR_IRSTS, align 4
  %35 = call i32 @nvt_cir_reg_write(%struct.nvt_dev* %33, i32 255, i32 %34)
  %36 = load %struct.nvt_dev*, %struct.nvt_dev** %2, align 8
  %37 = call i32 @nvt_set_cir_iren(%struct.nvt_dev* %36)
  ret void
}

declare dso_local i32 @nvt_cir_reg_write(%struct.nvt_dev*, i32, i32) #1

declare dso_local i32 @nvt_clear_cir_fifo(%struct.nvt_dev*) #1

declare dso_local i32 @nvt_clear_tx_fifo(%struct.nvt_dev*) #1

declare dso_local i32 @nvt_set_cir_iren(%struct.nvt_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
